# cryptlocker

./: Cargo.toml  ReadMe.md  pubkey.gpg
scripts/: install.bat  install.sh  uninstall.bat  uninstall.sh
src/: main.rs
src/crypt/: decrypt.rs  encrypt.rs  mod.rs  utils.rs
