[package]
name = "cryptlocker"
version = "1.0.0"
edition = "2021"
license-file = "LICENSE"
repository = "https://www.github.com/ArunVenkata/cryptlocker"
readme = "ReadMe.md"
authors = ["Arun V <arunvv.dev@gmail.com>"]

[dependencies]
zeroize = "1.8.1"
clap = { version = "4.5.26", features = ["derive"] }
aes-gcm = "0.10.3"
aes = "0.8"
rand = "0.8"
anyhow = "1.0"
argon2 = "0.5"
rpassword = "7.3"
password-hash = "0.5"
base64 = "0.22"
indicatif = "0.17"
walkdir = "2.5"
zip = "2.2"